# RedCarpet-S

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.githooks/: pre-commit
data/: RedCarpet-S_functions.csv  data_symbols.csv  progress_history.csv
include/: sead
include/Game/Factory/: ProjectActorFactory.h
include/Game/Layout/: GuideGameWindow.h  WindowMessage.h  WindowProcessing.h
include/Game/MapObj/: Coin.h  EchoBlockMapParts.h  GoalItem.h  Lighthouse.h
include/Game/Player/: CourseSelectPlayerActor.h  IUsePlayerRetargettingSelector.h  PlayerActor.h  PlayerAnimFunc.h  PlayerAnimator.h  PlayerConstParam.h  PlayerModel.h  PlayerModelHolder.h
include/Game/Ride/: RaidonSurf.h
include/Game/Scene/: InGameSceneBase.h  LuigiBrosScene.h  SingleModeScene.h  StageScene.h
include/Game/Sequence/: ProductSequence.h  ProductStateLuigiBros.h  ProductStateSingleMode.h  StageWipeKeeper.h
include/Game/System/: AssetLoadingThread.h  GameDataHolder.h
include/Game/Util/: PlayerConstUtil.h
include/al/Anim/: AnimPlayerSkl.h
include/al/AreaObj/: AreaObjDirector.h
include/al/Audio/: AudioKeeper.h
include/al/Base/: Base.h  String.h  Types.h
include/al/Bgm/: BgmLineFunction.h
include/al/Camera/: CameraDirector.h  CameraDirector_RS.h  CameraPoser_RS.h  CameraUtil.h
include/al/Collision/: Collider.h  CollisionDirector.h  CollisionParts.h  MtxConnector.h
include/al/Controller/: InputFunction.h
include/al/Draw/: GraphicsStressDirector.h  GraphicsSystemInfo.h
include/al/Effect/: EffectKeeper.h
include/al/Execute/: ExecuteDirector.h
include/al/Factory/: ActorFactory.h  Factory.h
include/al/Functor/: FunctorBase.h  FunctorV0M.h
include/al/HitSensor/: ActorSensorFunction.h  ActorSensorMsgFunction.h  HitSensor.h  ScreenPointKeeper.h  ScreenPointTarget.h  ScreenPointer.h
include/al/Layout/: LayoutActionKeeper.h  LayoutActor.h  LayoutInitInfo.h  LayoutKeeper.h  LayoutPartsActorKeeper.h  LayoutSceneInfo.h
include/al/Rail/: Rail.h  (+2 more)
include/nerd/: ErrorViewer.h
src/: CMakeLists.txt
toolchain/: ToolchainNX64.cmake
tools/: config.toml  ghidra_dump_functions.py  progress.py  setup.py
(+73 files in other folders)
